UPDATE FHE FIEL